// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzes board by kind 1`] = `undefined`;

exports[`analyzes board by kind 2`] = `
{
  "payload": {
    "orientation": 0,
    "positions": [
      {
        "x": 0,
        "y": 1,
      },
      {
        "x": 0,
        "y": 2,
      },
      {
        "x": 0,
        "y": 3,
      },
    ],
  },
  "reason": 7,
}
`;

exports[`analyzes board by kind 3`] = `
{
  "payload": {
    "orientation": 0,
    "positions": [
      {
        "x": 0,
        "y": 1,
      },
    ],
  },
  "reason": 6,
}
`;

exports[`analyzes board by kind 4`] = `undefined`;

exports[`analyzes board by kind 5`] = `
{
  "payload": {
    "orientation": 0,
    "positions": [
      {
        "x": 0,
        "y": 3,
      },
      {
        "x": 0,
        "y": 4,
      },
      {
        "x": 0,
        "y": 5,
      },
    ],
  },
  "reason": 7,
}
`;

exports[`analyzes board by kind 6`] = `
{
  "payload": {
    "orientation": 1,
    "positions": [
      {
        "x": 4,
        "y": 0,
      },
    ],
  },
  "reason": 6,
}
`;
